All conformed to the maquette now

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
     You have been logged out.</div>
 <form th:action="@{/login}" method="post">
     <div>
-        <label>User:____</label>
+        <label style="margin-right: 32px">User:</label>
         <input type="text" name="username" placeholder="Username" style="margin-bottom: 3px"/>
     </div>
     <div>
